--- a/main.html
+++ b/main.html
@@ -1,16 +1,94 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8">
+  <title>My Favorite Holiday Destination</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px;
+      background-color: #f9f9f9;
+      color: #333;
+    }
 
+    h1 {
+      color: #2c3e50;
+      font-size: 36px;
+      border-bottom: 2px solid #3498db;
+      padding-bottom: 10px;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.6;
+    }
+
+    h2 {
+      margin-top: 40px;
+      color: #34495e;
+    }
+
+    ol, ul {
+      margin-left: 20px;
+      padding: 10px;
+    }
+
+    ol li, ul li {
+      font-size: 17px;
+      margin-bottom: 8px;
+    }
+
+    strong {
+      color: #e74c3c;
+    }
+
+    em {
+      color: #8e44ad;
+      font-style: italic;
+    }
+
+    li::marker {
+      color: #3498db;
+    }
+
+    ul {
+      list-style-type: disc;
+    }
+
+    ol {
+      list-style-type: decimal;
+    }
+
+    br {
+      line-height: 30px;
+    }
+  </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <h1>Paris, France</h1>
+  <br>
+  <p>
+    Paris, the capital of France, is known as the <em>City of Light</em>. It offers a perfect blend of history, art, architecture, fashion, and food, making it one of the most visited holiday destinations in the world.
+  </p>
+
+  <h2>Top 5 Attractions</h2>
+  <ol>
+    <li><strong>Eiffel Tower</strong> – The iconic symbol of Paris and a must-visit landmark.</li>
+    <li><em>Louvre Museum</em> – Home to thousands of artworks, including the <strong>Mona Lisa</strong>.</li>
+    <li><strong>Notre-Dame Cathedral</strong> – A masterpiece of Gothic architecture.</li>
+    <li><em>Champs-Élysées</em> – One of the most famous avenues in the world for shopping and strolling.</li>
+    <li><strong>Montmartre</strong> – A historic district known for its <em>artistic vibe</em> and the Sacré-Cœur Basilica.</li>
+  </ol>
+
+  <h2>Must-Try Foods</h2>
+  <ul>
+    <li><strong>Croissant</strong> – A buttery, flaky pastry best enjoyed fresh in the morning.</li>
+    <li><em>Ratatouille</em> – A traditional vegetable dish with bold Mediterranean flavors.</li>
+    <li><strong>Crêpes</strong> – Thin pancakes that can be enjoyed with sweet or savory fillings.</li>
+    <li><em>Baguette</em> – A staple in French cuisine, crispy on the outside and soft inside.</li>
+    <li><strong>Macarons</strong> – Colorful and delicate cookies with a sweet, chewy center.</li>
+  </ul>
 
 </body>
-
 </html>
