--- a/main.html
+++ b/main.html
@@ -2,32 +2,58 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Favorite Holiday Destination</title>
+  <title>Paris</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+
+    h1 {
+      color: #2c3e50;
+    }
+
+    ol, ul {
+      margin-top: 10px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    strong, b {
+      color: #e74c3c;
+    }
+
+    em, i {
+      color: #2980b9;
+    }
+  </style>
 </head>
 <body>
 
-  <h1>Paris, France</h1>
+  <h1>Paris</h1>
   <br>
-  <p>
-    Paris, the capital of France, is known as the <em>City of Light</em>. It offers a perfect blend of history, art, architecture, fashion, and food, making it one of the most visited holiday destinations in the world.
-  </p>
+  <p>Paris, the capital city of France, is renowned for its art, culture, fashion, and gastronomy. Known as the "City of Light," it attracts millions of visitors every year with its timeless charm and romantic ambiance.</p>
 
   <h2>Top 5 Attractions</h2>
   <ol>
-    <li><strong>Eiffel Tower</strong> – The iconic symbol of Paris and a must-visit landmark.</li>
-    <li><em>Louvre Museum</em> – Home to thousands of artworks, including the <strong>Mona Lisa</strong>.</li>
-    <li><strong>Notre-Dame Cathedral</strong> – A masterpiece of Gothic architecture.</li>
-    <li><em>Champs-Élysées</em> – One of the most famous avenues in the world for shopping and strolling.</li>
-    <li><strong>Montmartre</strong> – A historic district known for its <em>artistic vibe</em> and the Sacré-Cœur Basilica.</li>
+    <li><strong>Eiffel Tower</strong> – A symbol of Paris and one of the most recognizable structures in the world.</li>
+    <li><i>Louvre Museum</i> – Home to famous works like the Mona Lisa and the Venus de Milo.</li>
+    <li><strong>Notre-Dame Cathedral</strong> – An iconic Gothic cathedral with stunning architecture.</li>
+    <li><em>Sacré-Cœur Basilica</em> – Located at the summit of Montmartre, offering panoramic city views.</li>
+    <li><strong>Champs-Élysées</strong> – A historic avenue known for shopping and celebrations.</li>
   </ol>
 
   <h2>Must-Try Foods</h2>
   <ul>
-    <li><strong>Croissant</strong> – A buttery, flaky pastry best enjoyed fresh in the morning.</li>
-    <li><em>Ratatouille</em> – A traditional vegetable dish with bold Mediterranean flavors.</li>
-    <li><strong>Crêpes</strong> – Thin pancakes that can be enjoyed with sweet or savory fillings.</li>
-    <li><em>Baguette</em> – A staple in French cuisine, crispy on the outside and soft inside.</li>
-    <li><strong>Macarons</strong> – Colorful and delicate cookies with a sweet, chewy center.</li>
+    <li><strong>Croissant</strong> – A buttery, flaky pastry enjoyed at breakfast.</li>
+    <li><em>Macarons</em> – Delicate sandwich cookies with flavored fillings.</li>
+    <li><i>Ratatouille</i> – A traditional vegetable dish with bold Mediterranean flavors.</li>
+    <li><b>Baguette</b> – A long, crusty French bread, essential to any Parisian meal.</li>
+    <li><em>Crêpes</em> – Thin pancakes that can be sweet or savory.</li>
   </ul>
 
 </body>
